add Show Item in Rss and read in webview

--- a/app/src/main/res/layout/activity_read_rss.xml
+++ b/app/src/main/res/layout/activity_read_rss.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ReadRssActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
@@ -20,5 +20,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/login_navigation" />
+        app:navGraph="@navigation/read_rss_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
