--- a/app/src/main/res/layout/fragment_list_rss_items.xml
+++ b/app/src/main/res/layout/fragment_list_rss_items.xml
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
     <LinearLayout
+        android:id="@+id/layout_item"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingHorizontal="10dp"
+        android:orientation="horizontal"
+        android:weightSum="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:weightSum="3"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:weightSum="20"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/title_rssItem"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:maxLines="2"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:text="TextView" />
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:paddingBottom="10dp"
+                android:text="TextView"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
@@ -45,23 +44,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="TextView" />
+                    android:maxLines="1"
+                    android:text="TextView"
+                    android:textSize="10sp" />
 
                 <TextView
                     android:id="@+id/actor_rssItem"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="10sp" />
             </LinearLayout>
         </LinearLayout>
 
         <ImageView
             android:id="@+id/image_rssItem"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:paddingStart="5dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars" />
-
+            android:layout_weight="1" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
