--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,20 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.search.SearchFragment">
-
-    <EditText
-        android:id="@+id/text_url_search"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/title_search"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:text="Search"
+        android:textColor="@color/white"
+        android:paddingVertical="10dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <AutoCompleteTextView
+        android:id="@+id/text_url_search"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:textAlignment="center"
+        android:hint="Input your Rss"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/black"
+        android:background="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_search"
+        app:layout_constraintVertical_bias="0.155"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/searchUrl"
