--- a/app/src/main/res/layout/fragment_history_item.xml
+++ b/app/src/main/res/layout/fragment_history_item.xml
@@ -11,8 +11,7 @@
         android:id="@+id/logo_history_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="4"
-        app:srcCompat="@drawable/ic_home_black_24dp" />
+        android:layout_weight="4" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +25,7 @@
             android:id="@+id/title_history_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:layout_weight="4"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -37,6 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+
+            android:textColor="@color/white"
             android:maxLines="1"
             android:text="asdas.com" />
 
@@ -45,6 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+
+            android:textColor="@color/white"
             android:gravity="right"
             android:textSize="10sp"
             android:text="30/4/2021" />
